fix: change to dark mode

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,6 +16,13 @@ body,
   height: 100%;
 }
 
+div,
+ul,
+li {
+  margin: 0;
+  padding: 0;
+}
+
 li {
   list-style: none;
 }
